# Good-Old-Fashion-Pong

./: .gitignore  Build.bat  CMakeLists.txt  Makefile  README.md  ball.cpp  ball.hpp  game.cpp  game.hpp  main.cpp  paddle.cpp  paddle.hpp  score.cpp  score.hpp
CMake_version/: CMakeLists.txt
CMake_version/cmake/: read.txt
include/: ball.hpp  game.hpp  paddle.hpp  score.hpp
original/: Makefile
src/: ball.cpp  game.cpp  main.cpp  paddle.cpp  score.cpp
